--- a/data/stories.yml
+++ b/data/stories.yml
@@ -1,30 +1,87 @@
 version: "2.0"
-
 stories:
-
-- story: happy path
+- story: camino feliz
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_great
-  - action: utter_happy
-
-- story: sad path 1
+  - intent: hola
+  - action: utter_hola
+  - intent: siento_bien
+  - action: utter_feliz
+- story: camino triste 1
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: affirm
-  - action: utter_happy
-
-- story: sad path 2
+  - intent: hola
+  - action: utter_hola
+  - intent: siento_mal
+  - action: utter_animar
+  - action: utter_eso_ayudo
+  - intent: afirmar
+  - action: utter_feliz
+- story: camino triste 2
   steps:
-  - intent: greet
-  - action: utter_greet
-  - intent: mood_unhappy
-  - action: utter_cheer_up
-  - action: utter_did_that_help
-  - intent: deny
-  - action: utter_goodbye
+  - intent: hola
+  - action: utter_hola
+  - intent: siento_mal
+  - action: utter_animar
+  - action: utter_eso_ayudo
+  - intent: negar
+  - action: utter_adios
+- story: consultar grupo
+  steps:
+  - intent: grupos_neo
+  - action: utter_grupos_neo
+rules:
+- rule: Decir adios
+  steps:
+  - intent: adios
+  - action: utter_adios
+- rule: soy un bot
+  steps:
+  - intent: bot_challenge
+  - action: utter_soy_un_bot
+- rule: activar form pelicula
+  steps:
+  - intent: pelicula
+  - action: utter_pelicula
+  - action: pelicula_form
+  - active_loop: pelicula_form
+- rule: enviar datos pelicula
+  condition:
+  - active_loop: pelicula_form
+  steps:
+  - action: pelicula_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_movie_api
+  - action: action_flush_slots
+- rule: activar form clima
+  steps:
+  - intent: clima
+  - action: utter_ciudad
+  - action: ciudad_form
+  - active_loop: ciudad_form
+- rule: enviar datos ciudad
+  condition:
+  - active_loop: ciudad_form
+  steps:
+  - action: ciudad_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_weather_api
+  - action: action_flush_slots
+- rule: activar form google
+  steps:
+  - intent: google
+  - action: utter_google
+  - action: google_form
+  - active_loop: google_form
+- rule: enviar datos google
+  condition:
+  - active_loop: google_form
+  steps:
+  - action: google_form
+  - active_loop: null
+  - slot_was_set:
+    - requested_slot: null
+  - action: action_entidad_google
+  - action: action_flush_slots
